# glenside-web-demo

./: .gitignore  Cargo.toml  rust-toolchain
.github/workflows/: check-formatting.yml  deploy-to-github-pages.yml  run-tests.yml  workflow.yml
pkg/: README.md  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
src/: lib.rs  main.rs
static/: index.html
