[package]
name = "glenside-web-demo"
version = "0.1.0"
authors = ["Gus Smith <guscomps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

yew = "0.17.4" 

[dependencies.glenside]
git = "https://github.com/gussmith23/glenside"
rev = "bf1aa3a"
default-features = false
