[package]
name = "glenside-web-demo"
version = "0.1.0"
authors = ["Gus Smith <guscomps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

yew = "0.17.4" 
wasm-bindgen = "0.2.71"
monaco = { features = ["yew-components"], git = "https://github.com/siku2/rust-monaco", rev = "97ab515" }
web-sys = { version = "0.3.48", features = ["console"] }
ndarray = "0.13.0"

[dependencies.glenside]
git = "https://github.com/gussmith23/glenside"
rev = "514a8c3"
default-features = false
